# wfhsite

./: .gitignore  Dockerfile  db.sqlite3  gunicorn.conf.py  manage.py  pyproject.toml  readMe.md  requirements.txt  supervisor_gunicord.conf
blog/: README.md  models.py
blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0004_auto_20211225_0857.py  0005_blogtagindexpage.py  0006_advert.py  0007_auto_20211227_0544.py  0008_auto_20211227_0547.py  0009_blogindexpage_advert.py  0010_blogpagesnippetadverts.py
blog/templates/blog/: blog_index_page.html  blog_page.html
blog/templatetags/: demo_tags.py
demos/: models.py
demos/migrations/: 0001_initial.py  0002_studentpage.py
demos/templates/demos/: student.html
docs/: bash.md  commands.md  demo.py  dependencies.md  django.md  django.wsd  django_response.wsd  docker.md  gunicorn.md  homebrew.md  mysql.md  openresty.md  python.md  readMe.md  supervisor.md  uwsgi.md  wagtail.md
home/: models.py
home/migrations/: 0003_homepage_body.py  0004_homebanner.py  0005_auto_20220107_0951.py  0006_auto_20220107_1017.py  0007_alter_homebanner_options.py  0008_auto_20220108_1300.py  0009_auto_20220112_0524.py  0010_alter_homepage_options.py  0011_alter_homepage_options.py
home/static/css/: home.css
home/static/js/: home.js
home/templates/home/: home_page.html
polls/: models.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html
search/: views.py
snippets/: models.py  wagtail_hooks.py
snippets/migrations/: 0001_initial.py  0002_banner.py  0003_book.py  0004_banner_type.py  0005_alter_banner_type.py  0006_auto_20220107_0919.py  0007_auto_20220107_0940.py  0008_remove_metadata_type.py  0009_metadata_type.py  0010_alter_metadata_type.py  0011_alter_metadata_type.py  0012_auto_20220108_1223.py  0013_auto_20220108_1240.py  0014_banner_type.py  0015_auto_20220108_1247.py  0016_auto_20220111_1230.py  0017_auto_20220112_0136.py  0018_auto_20220112_0141.py  0019_metadata_label.py  0020_remove_metadata_label.py  0021_metadata_label.py  0022_remove_metadata_label.py  0023_metadata_label.py  0024_alter_metadata_image.py  0025_auto_20220613_1525.py  0026_alter_footer_options.py
snippets/templates/snippets/: demo.html
snippets/templatetags/: advert_tags.py  demo_tags.py
static/: staticfiles.json
static/css/: home.8cd4c82bbdbc.css  wfhsite.css
static/js/: wfhsite.js
wfhsite/: urls.py  wagtail_hooks.py  wsgi.py
wfhsite/settings/: base.py  dev.py  production.py
wfhsite/static/css/: wfhsite.css
wfhsite/static/js/: wfhsite.js
wfhsite/templates/: banner.html  base.html  header.html
