[project]
name = "wfhsite"
version = "0.1.0"
description = "这是一个django项目，用于学习python和django"
readme = "README.md"
requires-python = ">=3.9.7"
dependencies = [
    "anyascii==0.3.0",
    "anyio==3.6.2",
    "appnope==0.1.3",
    "argon2-cffi==21.3.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.2.3",
    "asgiref==3.4.1",
    "asttokens==2.2.1",
    "attrs==22.2.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.9.3",
    "bleach==6.0.0",
    "certifi==2021.10.8",
    "cffi==1.15.1",
    "charset-normalizer==2.0.9",
    "comm==0.1.2",
    "debugpy==1.6.6",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "distlib==0.3.4",
    "django==3.2.10",
    "django-filter==21.1",
    "django-modelcluster==5.2",
    "django-taggit==1.5.1",
    "django-treebeard==4.5.1",
    "djangorestframework==3.13.1",
    "draftjs-exporter==2.1.7",
    "et-xmlfile==1.1.0",
    "executing==1.2.0",
    "fastjsonschema==2.16.3",
    "filelock==3.7.1",
    "flake8==4.0.1",
    "fqdn==1.5.1",
    "gevent>=24.2.1",
    "gunicorn>=23.0.0",
    "html5lib==1.1",
    "idna==3.3",
    "importlib-metadata==6.0.0",
    "ipykernel==6.21.2",
    "ipython==8.11.0",
    "ipython-genutils==0.2.0",
    "ipywidgets==8.0.4",
    "isoduration==20.11.0",
    "jedi==0.18.2",
    "jinja2==3.1.2",
    "jsonpointer==2.3",
    "jsonschema==4.17.3",
    "jupyter==1.0.0",
    "jupyter-client==8.0.3",
    "jupyter-console==6.6.2",
    "jupyter-core==5.2.0",
    "jupyter-events==0.6.3",
    "jupyter-server==2.3.0",
    "jupyter-server-terminals==0.4.4",
    "jupyterlab-pygments==0.2.2",
    "jupyterlab-widgets==3.0.5",
    "l18n==2021.3",
    "markupsafe==2.1.2",
    "matplotlib-inline==0.1.6",
    "mccabe==0.6.1",
    "mistune==2.0.5",
    "mysqlclient==2.2.7",
    "nbclassic==0.5.2",
    "nbclient==0.7.2",
    "nbconvert==7.2.9",
    "nbformat==5.7.3",
    "nest-asyncio==1.5.6",
    "notebook==6.5.2",
    "notebook-shim==0.2.2",
    "openpyxl==3.0.9",
    "packaging==23.0",
    "pandocfilters==1.5.0",
    "parso==0.8.3",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "pillow==8.4.0",
    "pipenv==2022.7.4",
    "platformdirs==2.5.2",
    "prometheus-client==0.16.0",
    "prompt-toolkit==3.0.38",
    "psutil==5.9.4",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycodestyle==2.8.0",
    "pycparser==2.21",
    "pyflakes==2.4.0",
    "pygments==2.14.0",
    "pyrsistent==0.19.3",
    "python-dateutil==2.8.2",
    "python-json-logger==2.0.7",
    "pytz==2021.3",
    "pyyaml==6.0",
    "pyzmq==25.0.0",
    "qtconsole==5.4.0",
    "qtpy==2.3.0",
    "requests==2.26.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "send2trash==1.8.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "soupsieve==2.3.1",
    "sqlparse==0.4.2",
    "stack-data==0.6.2",
    "supervisor==4.2.5",
    "tablib==3.1.0",
    "telepath==0.2",
    "terminado==0.17.1",
    "tinycss2==1.2.1",
    "tornado==6.2",
    "traitlets==5.9.0",
    "uri-template==1.2.0",
    "urllib3==1.26.7",
    "uwsgi==2.0.21",
    "virtualenv==20.15.1",
    "virtualenv-clone==0.5.7",
    "wagtail==2.15.1",
    "wcwidth==0.2.6",
    "webcolors==1.12",
    "webencodings==0.5.1",
    "websocket-client==1.5.1",
    "widgetsnbextension==4.0.5",
    "willow==1.4",
    "xlrd==2.0.1",
    "xlsxwriter==3.0.2",
    "xlwt==1.3.0",
    "yapf==0.32.0",
    "zipp==3.15.0",
]
